--- a/roles/tomcat/tasks/roles_tomcat.yml
+++ b/roles/tomcat/tasks/roles_tomcat.yml
@@ -1,11 +1,37 @@
+
 ---
-- name: install java derniere version
-  yum: 
-sudo yum install java-1.8.0-openjdk.x86_64
-sudo groupadd tomcat
-sudo mkdir /opt/tomcat
-sudo useradd -s /bin/nologin -g tomcat -d /opt/tomcat tomcat
-cd ~
-wget http://www-us.apache.org/dist/tomcat/tomcat-8/v8.0.33/bin/apache-tomcat-8.0.33.tar.gz
-sudo tar -zxvf apache-tomcat-8.0.33.tar.gz -C /opt/tomcat --strip-components=1
+
+- name: Ensure Java is installed.
+  package:
+    name: "java-1.8.0-openjdk"
+    state: present
+    
+- name: tomcat | group add
+  group: name=tomcat
+    
+- name: tomcat | user add
+  user: name=tomcat group=tomcat home=/opt/tomcat createhome=no 
+  
+    #télécharger l'archive de tomcat
+- name: tomcat | binary download
+  get_url: url="http://mirror.nus.edu.sg/apache/tomcat/tomcat-8/v8.5.40/bin/apache-tomcat-8.5.40.tar.gz"  dest="/tmp"
+   
+
+- name: tomcat  | extract archive
+    #unarchive le dossier .tar
+  shell: "tar xzf /tmp/apache-tomcat-8.5.40.tar.gz -C /opt"
+
+    #création d'un lien symbolique de tomcat
+- name: tomcat  | symlink install directory
+  file: src="/opt/apache-tomcat-8.5.40" path="/opt/tomcat8" state=link
+  
+
+- name: tomcat  |   change ownership of target installation
+  file: path="/opt/tomcat8" owner=tomcat group=tomcat state=directory recurse=yes
+- name: tomcat  | systemd
+  template: src=tomcat.service dest=/etc/systemd/system/tomcat.service
+- name: tomcat  | restart
+  service:
+     name: tomcat
+     state: restarted
 
