--- a/roles/apache/tasks/roles_apache.yml
+++ b/roles/apache/tasks/roles_apache.yml
@@ -3,7 +3,7 @@
     yum:
       name: httpd
       state: present
-  - name: start service
+  - name: start service apache
     service: 
        name: httpd
        state: started
